Continuously testing connecting to Blockmail network.

--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -18,7 +18,7 @@
     <!-- Bootstrap Script Import -->
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
-    <!-- My JavaScript Import -->
+    <!-- End Bootstrap Script Import -->
     <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="#"><img id="logo" src="images/logo_text.png" /></a>
 
@@ -65,8 +65,9 @@
                             </div>
                         </form>
                         <button id="auth_btn" class="btn btn-lg btn-primary btn-block text-uppercase">Authenticate</button>
+                        <!-- My JavaScript Import -->
                         <script src="js/authenticate.js"></script>
-
+                        <!-- End My JavaScript Import -->
                         <div id="login-box-warning"></div>
                     </div>
                 </div>
