--- a/Frontend/about-us.html
+++ b/Frontend/about-us.html
@@ -42,16 +42,12 @@
             <div class="row">
                 <div class="col-md-6 mt-md-0 mt-3">
                     <h5 class="text-uppercase font-weight-bold">Purpose</h5>
-                    <p>BlockMail is a dissertation project developed by Tom Herring at Queen Mary University London in 2019. It serves as a proof of concept that Blockchain technology can be used as an email system for extremely secure, traceable
-                        communications.</p>
+                    <p>BlockMail is a dissertation project developed by Tom Herring at Queen Mary University London in 2019. It serves as a proof of concept that Blockchain technology can be used as an email system for extremely secure, traceable communications.</p>
                 </div>
                 <hr class="clearfix w-100 d-md-none pb-3" />
                 <div class="col-md-6 mb-md-0 mb-3">
                     <h5 class="text-uppercase font-weight-bold">More Information</h5>
-                    <p>
-                        If you would like to learn more about Blockchain technology, please go to <a href="https://www.investopedia.com/terms/b/blockchain.asp">Investopedia </a>. This gives a good
-                        outline of the technology and its potential uses (both now and in the future). For any questions, please email <a href="mailto:t.d.herring@se17.qmul.ac.uk"> t.d.herring@se17.qmul.ac.uk</a>.
-                    </p>
+                    <p>If you would like to learn more about Blockchain technology, please go to <a href="https://www.investopedia.com/terms/b/blockchain.asp">Investopedia </a>. This gives a good outline of the technology and its potential uses (both now and in the future). For any questions, please email <a href="mailto:t.d.herring@se17.qmul.ac.uk"> t.d.herring@se17.qmul.ac.uk</a>.</p>
                 </div>
             </div>
             <hr class="clearfix" />
