Added block creation. Next to expand to other nodes and make distributed.
Changed over to a CDN for bootstrap and jquery.

--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -8,19 +8,16 @@
     <meta name="keywords" content="" />
     <meta name="description" content="A blockchain based email system, with a focus on security through transparency of design." />
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
-    <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900|Quicksand:400,700|Questrial" rel="stylesheet" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="css/default.css" rel="stylesheet" type="text/css" media="all" />
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <!-- Bootstrap Script Import -->
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="bootstrap/js/bootstrap.min.js"></script>
-    <!-- End Bootstrap Script Import -->
     <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="#"><img id="logo" src="images/logo_text.png" /></a>
-
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -63,7 +60,7 @@
                                 <input type="button" id="clear-private" class="hidden" onclick="clearFile(false)"></input>
                             </div>
                         </form>
-                        <button id="auth_btn" class="btn btn-lg btn-primary btn-block text-uppercase">Authenticate</button>
+                        <button id="auth-btn" class="btn btn-lg btn-primary btn-block text-uppercase">Authenticate</button>
                         <!-- My JavaScript Import -->
                         <script src="js/authenticate.js"></script>
                         <!-- End My JavaScript Import -->
