Changed from block broadcast to transaction broadcast
Need to fix with > 1 node.

--- a/Frontend/mail.html
+++ b/Frontend/mail.html
@@ -16,7 +16,6 @@
 </head>
 
 <body>
-    <script src="js/connect_to_network.js"></script>
     <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="#"><img id="logo" src="images/logo_text.png" /></a>
 
@@ -35,7 +34,130 @@
             </div>
         </div>
     </nav>
-    <div class="wrapper"></div>
+    <div class="wrapper">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-5">
+                    <input type="button" class="btn btn-lg btn-dark btn-primary btn-block text-uppercase new-email-btn" value="+ New Email"></input>
+                    <table class="table table-sm table-striped table-bordered email-table">
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <a href="#">
+                                        <h4>SUBJECT</h4>
+                                        <h5>From: ADDRESS</h5>
+                                        <em>Lorem ipsum est...</em>
+                                    </a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <a href="#">
+                                        <h4>SUBJECT</h4>
+                                        <h5>From: ADDRESS</h5>
+                                        <em>Lorem ipsum est...</em>
+                                    </a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <a href="#">
+                                        <h4>SUBJECT</h4>
+                                        <h5>From: ADDRESS</h5>
+                                        <em>Lorem ipsum est...</em>
+                                    </a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <a href="#">
+                                        <h4>SUBJECT</h4>
+                                        <h5>From: ADDRESS</h5>
+                                        <em>Lorem ipsum est...</em>
+                                    </a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <a href="#">
+                                        <h4>SUBJECT</h4>
+                                        <h5>From: ADDRESS</h5>
+                                        <em>Lorem ipsum est...</em>
+                                    </a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <a href="#">
+                                        <h4>SUBJECT</h4>
+                                        <h5>From: ADDRESS</h5>
+                                        <em>Lorem ipsum est...</em>
+                                    </a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <a href="#">
+                                        <h4>SUBJECT</h4>
+                                        <h5>From: ADDRESS</h5>
+                                        <em>Lorem ipsum est...</em>
+                                    </a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <a href="#">
+                                        <h4>SUBJECT</h4>
+                                        <h5>From: ADDRESS</h5>
+                                        <em>Lorem ipsum est...</em>
+                                    </a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <a href="#">
+                                        <h4>SUBJECT</h4>
+                                        <h5>From: ADDRESS</h5>
+                                        <em>Lorem ipsum est...</em>
+                                    </a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <a href="#">
+                                        <h4>SUBJECT</h4>
+                                        <h5>From: ADDRESS</h5>
+                                        <em>Lorem ipsum est...</em>
+                                    </a>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <nav>
+                        <ul class="pagination justify-content-left">
+                            <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                            <li class="page-item"><a class="page-link" href="#">1</a></li>
+                            <li class="page-item"><a class="page-link" href="#">2</a></li>
+                            <li class="page-item"><a class="page-link" href="#">3</a></li>
+                            <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="col-7 send-read-email-area">
+                    <h3>Send BlockMail</h3>
+                    <form class="send-email-form">
+                        <input class="form-control form-control-md" id="to" type="text" placeholder="To">
+                        <input class="form-control form-control-md" id="subject" type="text" placeholder="Subject">
+                        <textarea class="form-control" id="body" rows="37"></textarea>
+                        <hr class="clearfix" />
+                        <input type="submit" class="btn btn-lg btn-dark btn-primary btn-block text-uppercase" value="Send"></input>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
     <footer class="page-footer font-small pt-4">
         <div class="container-fluid text-center text-md-left">
             <div class="row">
@@ -54,5 +176,6 @@
         <div class="footer-copyright text-center py-3">© BlockMail 2019</div>
     </footer>
 </body>
+<script src="js/mail.js"></script>
 
 </html>
