Key generation and download of keys implemented

--- a/Frontend/about-us.html
+++ b/Frontend/about-us.html
@@ -13,13 +13,13 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-xl navbar-light">
         <a class="navbar-brand" href="#"><img id="logo" src="images/logo_text.png" /></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
+            <div class="navbar-nav ml-auto">
                 <a class="nav-item nav-link" href="index.html">Home</a>
                 <a class="nav-item nav-link" href="login.html">Login</a>
                 <a class="nav-item nav-link" href="create-account.html">Create Account</a>
@@ -46,7 +46,7 @@
             </div>
             <hr class="clearfix" />
         </div>
-        <div class="footer-copyright text-center py-3">© BlockMail 2019</div>
+        <div class="footer-copyright text-center py-3">© BlockMail 2019/20</div>
     </footer>
 
     <!-- JQuery and Bootstrap Import -->
