Able to send mail from frontend. Need to set up getting all mail for user.

--- a/Frontend/create-account.html
+++ b/Frontend/create-account.html
@@ -40,7 +40,7 @@
                         If you can't save them using the "Download" buttons,
                         copy them into files and save them.<br><br>
                         <b>NOTE</b>: If you lose these keys, it is <em>IMPOSSIBLE</em> to recover them, so keep them somewhere safe and have them backed up! <br><br>
-                        <input type="button" class="btn btn-lg btn-dark btn-primary btn-block text-uppercase" id="gen-keys-btn" value="Generate Keys"></input>
+                        <button class="btn btn-lg btn-primary btn-block text-uppercase" id="gen-keys-btn">Generate Keys</button>
                         <div id="keys"> </div>
                     </div>
                 </div>
@@ -78,7 +78,6 @@
     <!-- My JavaScript Import -->
     <script src="js/modules/elliptic.js"></script>
     <script src="js/modules/node-rsa.js"></script>
-    <script src="js/modules/FileSaver.js"></script>
     <script src="js/gen-keys.js"></script>
 
 </body>
