--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -40,7 +40,7 @@
         <p>
             BlockMail is a Blockchain based email system. It makes use of the foundations of Blockchain technology to provide a secure, and traceable way of commmunicating with professionals.
             <br><br>
-            All mail is encrypted by SHA256, providing unparralelled security. The immutable nature of the Blockchain means that emails will remain as they were sent forever.
+            All mail is encrypted by RSA-2048, providing unparralelled security. The immutable nature of the Blockchain means that emails will remain as they were sent forever.
         </p>
     </div>
     <footer class="page-footer font-small pt-4">
