--- a/Frontend/mail.html
+++ b/Frontend/mail.html
@@ -148,7 +148,7 @@
                         <input class="form-control form-control-md" id="subject" type="text" placeholder="Subject">
                         <textarea class="form-control" id="body" rows="37"></textarea>
                         <hr class="clearfix" />
-                        <input type="submit" class="btn btn-lg btn-dark btn-primary btn-block text-uppercase" value="Send"></input>
+                        <input type="submit" class="btn btn-lg btn-primary btn-dark btn-block text-uppercase" value="Send"></input>
                     </form>
                 </div>
             </div>
@@ -178,6 +178,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <!-- My JavaScript Import -->
+    <script src="js/modules/node-rsa.js"></script>
     <script src="js/mail.js"></script>
 
 </body>
